WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247699
Error() ICs should not cache special properties
https://bugs.webkit.org/show_bug.cgi?id=247699
Summary
Error() ICs should not cache special properties
Justin Michaud
Reported
2022-11-09 14:29:48 PST
Error() ICs should not cache special properties
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2022-11-09 14:29:57 PST
<
rdar://problem/101906709
>
Justin Michaud
Comment 2
2022-11-09 14:36:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6319
EWS
Comment 3
2022-11-09 19:22:05 PST
Committed
256519@main
(28686e63de0d): <
https://commits.webkit.org/256519@main
> Reviewed commits have been landed. Closing PR #6319 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug